CSS: Corrected low resolution text-align for menu

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -94,7 +94,7 @@ header {
             margin-top: 15px;
         }
         #wb-glb-mn {
-            text-align: right;
+
             .overlay-lnk {
                 font-size: 1.1em !important;
             }
